# speckle

./: .gitignore  CMakeLists.txt  README.md
src/: CMakeLists.txt
src/capture/: KinectCapture.cpp  capture.cpp
src/common/: OpenCvTypes.h
src/compute/: ColourMap.cpp  ColourMap.h  ComputePipeline.cpp  ComputePipeline.h  ComputePos.h  CorrelationTime.cpp  CorrelationTime.h  SpatialWindow.cpp  SpatialWindow.h  Unpack.h  Visualize.cpp  Visualize.h
src/gui/: CMakeLists.txt  FrameEvent.h  MainWindow.cpp  MainWindow.h  gui.cpp
src/tools/capture/: CMakeLists.txt  KinectCapture.cpp  KinectCapture.h  capture.cpp
src/tools/process/: CMakeLists.txt  process.cpp
test/: CorrelationTime.tsv  SpatialWindow.tsv  source.gnumeric  test-runner.cpp
